--- a/Carolina_Crime_Exploratory_Analysis.ipynb
+++ b/Carolina_Crime_Exploratory_Analysis.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "    \n",
-    "# Perform EDA on North Carolina Crime Rate Dataset"
+    "# Perform EDA on North Carolina Crime Rate Dataset (Part I)"
    ]
   },
   {
@@ -14,7 +14,7 @@
    "source": [
     "## **Data Description:** \n",
     "\n",
-    "The dataset contains the data for ** crime rate in the state of North Carolina**  aggregated by county."
+    "The dataset contains the data for **crime rate in the state of North Carolina**  aggregated by county."
    ]
   },
   {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,6 @@
     "\n",
     "\n",
     "# Load haberman.csv into a pandas dataFrame.\n",
-    "# Survival data of patients who had undergone surgery for breast cancer\n",
     "crimeData = pd.read_csv(\"crime_v2.csv\")\n",
     "    \n",
     "# (Q) how many data-points and features?\n",
@@ -315,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -365,12 +364,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**The last row was getting read as 'object' data. It was found to be due to the special symbol at the last row, last column 0.074198931'.** Removed the special symbol from input csv file, to fix it."
+    "**The last column was getting read as 'object' data. It was found to be due to the special symbol at the last row, last column 0.074198931'.** Removed the special symbol from input csv file, to fix it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +658,7 @@
        "[8 rows x 25 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,12 +672,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is to be noted that the **maximum value of probability features, prbarr & prbconv, are > 1** which is a data anomaly. prbpris & pctymle are found to be < 1."
+    "It is to be noted that the **maximum value of probability features, prbarr & prbconv, are found to be > 1** which is a data anomaly. The maximum values of prbpris & pctymle are found to be < 1, hence data may be correct."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +720,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,12 +737,12 @@
    "source": [
     "There are 91 entries for all the 25 columns. Hence, there is **no missing value in the input dataset. Thus, no need to do data imputation ** or to drop any feature.\n",
     "\n",
-    "The zeros for features, west, central and urban are expected, as the data is inherently boolean. "
+    "The zero values for features, west, central and urban are expected, as the data is inherently boolean. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +832,7 @@
        "[1 rows x 25 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1190,14 +1189,119 @@
        "[10 rows x 25 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# This row has to be dropped because of data anomaly.\n",
+    "# These rows has to be dropped because of data anomaly.\n",
     "crimeData[crimeData['prbconv'] > 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>county</th>\n",
+       "      <th>year</th>\n",
+       "      <th>crmrte</th>\n",
+       "      <th>prbarr</th>\n",
+       "      <th>prbconv</th>\n",
+       "      <th>prbpris</th>\n",
+       "      <th>avgsen</th>\n",
+       "      <th>polpc</th>\n",
+       "      <th>density</th>\n",
+       "      <th>taxpc</th>\n",
+       "      <th>...</th>\n",
+       "      <th>wtuc</th>\n",
+       "      <th>wtrd</th>\n",
+       "      <th>wfir</th>\n",
+       "      <th>wser</th>\n",
+       "      <th>wmfg</th>\n",
+       "      <th>wfed</th>\n",
+       "      <th>wsta</th>\n",
+       "      <th>wloc</th>\n",
+       "      <th>mix</th>\n",
+       "      <th>pctymle</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>71</td>\n",
+       "      <td>87</td>\n",
+       "      <td>0.054406</td>\n",
+       "      <td>0.243119</td>\n",
+       "      <td>0.22959</td>\n",
+       "      <td>0.379175</td>\n",
+       "      <td>11.29</td>\n",
+       "      <td>0.00207</td>\n",
+       "      <td>4.834734</td>\n",
+       "      <td>31.536579</td>\n",
+       "      <td>...</td>\n",
+       "      <td>595.371948</td>\n",
+       "      <td>240.367325</td>\n",
+       "      <td>348.025391</td>\n",
+       "      <td>295.230072</td>\n",
+       "      <td>358.950012</td>\n",
+       "      <td>509.429993</td>\n",
+       "      <td>359.109985</td>\n",
+       "      <td>339.579987</td>\n",
+       "      <td>0.101861</td>\n",
+       "      <td>0.07939</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    county  year    crmrte    prbarr  prbconv   prbpris  avgsen    polpc  \\\n",
+       "32      71    87  0.054406  0.243119  0.22959  0.379175   11.29  0.00207   \n",
+       "\n",
+       "     density      taxpc   ...           wtuc        wtrd        wfir  \\\n",
+       "32  4.834734  31.536579   ...     595.371948  240.367325  348.025391   \n",
+       "\n",
+       "          wser        wmfg        wfed        wsta        wloc       mix  \\\n",
+       "32  295.230072  358.950012  509.429993  359.109985  339.579987  0.101861   \n",
+       "\n",
+       "    pctymle  \n",
+       "32  0.07939  \n",
+       "\n",
+       "[1 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The location cannot be both west and central together.\n",
+    "crimeData[crimeData['west']+crimeData['central'] > 1]"
    ]
   },
   {
@@ -1206,7 +1310,7 @@
    "source": [
     "**Observations:**\n",
     "\n",
-    "From above analysis, it is found, that **some rows have to be dropped** before doing regression analysis. The **special character error in the input dataset is also fixed.**\n",
+    "From above analysis, it is found, that **some rows have to be dropped** before doing regression analysis. The probability values of some rows are found to be > 1 and location of one row was found to be both 'west' and 'central' at the same time. We will drop these rows before building the model. The **special character error in the input dataset is also fixed.**\n",
     "\n",
     "\n",
     "# Univariate Analysis\n",
@@ -1453,7 +1557,7 @@
     "\n",
     "a) Based on the above pairplot, it can be noted that **density is most positively correlated with crime rate. There is also some correlation with weekly wages under different domains but it needs further investigation, as they are not so pronounced.**\n",
     "\n",
-    "b) Strangely, the **weekly wage features and crime rate is found to be slightly positively correlated. This signifies unequal distribution of income** or probability high unemployment rate. One of the most important features that is not in the given data is unemployment rate.\n",
+    "b) Strangely, the **weekly wage features and crime rate is found to be slightly positively correlated. This signifies unequal distribution of income** or probably high unemployment rate. One of the most important features that is not in the given data may be unemployment rate.\n",
     "\n",
     "Lets try to find if there is any correlation among features for each location: 'west', 'central' & 'urban'."
    ]
@@ -1641,10 +1745,7 @@
     "                    x_vars=categoricalCrime.columns[i:i+5],\n",
     "                    y_vars=['crmrte'])\n",
     "#          plt.title('Feature Correlation Plot for ' + category, loc = 'left')\n",
-    "        plt.suptitle('Feature Correlation Plot for ' + category)\n",
-    "#         plt.annotate('aa', xy=(0, 0.75))\n",
-    "        \n",
-    "        "
+    "        plt.suptitle('Feature Correlation Plot for ' + category)\n"
    ]
   },
   {
@@ -1661,7 +1762,7 @@
     "\n",
     "4) **Percentage of minority is positively correlated with crime rate, both in west and in urban areas.**\n",
     "\n",
-    "5) Thus, a combination of density and (urban or west or central) can help aid crime rate prediction.\n",
+    "5) Thus, a combination of density and location (urban/ west/ central) might help aid crime rate prediction.\n",
     "\n",
     "6) However, there seems to be **not much data for 'urban areas'** to arrive at a conclusion."
    ]
@@ -1701,9 +1802,10 @@
     "# 40% is taken as the threshold beyond which we include the feature in model. \n",
     "\n",
     "crimeData_corr = crimeData.corr()['crmrte']\n",
-    "selected_features_list = crimeData_corr[abs(crimeData_corr) > 0.4].sort_values(ascending=False)\n",
+    "selected_features_list = crimeData_corr[\n",
+    "                abs(crimeData_corr) > 0.4].sort_values(ascending=False)\n",
     "print(\"There are {} strongly correlated values with Crime Rate:\\n{}\".format(\n",
-    "                                len(selected_features_list), selected_features_list))\n",
+    "                len(selected_features_list), selected_features_list))\n",
     "\n",
     "print(list(selected_features_list.index))"
    ]
@@ -1730,7 +1832,8 @@
     "fig, ax = plt.subplots(round(len(selected_features_list) / 3), 3, figsize = (18, 12))\n",
     "\n",
     "features = list(selected_features_list.index)\n",
-    "plt.suptitle('Linear Regression Model fit of Strongly Correlated Features', fontsize=20)\n",
+    "plt.suptitle('Linear Regression Model fit of Strongly Correlated Features', \n",
+    "                                                                     fontsize=20)\n",
     "\n",
     "for i, ax in enumerate(fig.axes):\n",
     "    if i < len(features):\n",
@@ -1830,7 +1933,7 @@
     "\n",
     "a) The crime rate in urban areas is found to be significantly high. Thus, the feature 'urban' is an useful variable for prediction.\n",
     "\n",
-    "b) The crime rate in west is found to be less and central moderate. But as there is significant overlap, such variations may not to be very helpful for prediction. "
+    "b) The crime rate in west is found to be less and central moderate. But as there is significant overlap, such variations may not be very helpful for prediction. "
    ]
   },
   {
@@ -1952,7 +2055,10 @@
     "\n",
     "## Data Analysis and Cleaning\n",
     "\n",
-    "It is found, that **some rows have to be dropped** before doing regression analysis. The **special character error in the input dataset is also fixed**.\n",
+    "**Observations:**\n",
+    "\n",
+    "**Some rows have to be dropped** before doing regression analysis. The probability values of some rows are found to be > 1 and location of one row was found to be both 'west' and 'central', at the same time. We will drop these rows before building the model. The **special character error in the input dataset is also fixed.**\n",
+    "\n",
     "\n",
     "## Univariate Analysis\n",
     "\n",
@@ -1968,7 +2074,7 @@
     "\n",
     "## Bivariate Analysis\n",
     "\n",
-    "a) Based on the above pairplot, it can be noted that **density is most positively correlated with crime rate. There is also some correlation with weekly wages under different domains but it needs further investigation, as they are not so pronounced.**\n",
+    "a) Based on the pairplot, it can be noted that **density is most positively correlated with crime rate. There is also some correlation with weekly wages under different domains but it needs further investigation, as they are not so pronounced.**\n",
     "\n",
     "b) Strangely, the **weekly wage features and crime rate is found to be slightly positively correlated. This signifies unequal distribution of income** or probability high unemployment rate. One of the most important features that is not in the given data is unemployment rate.\n",
     "\n",
@@ -1982,7 +2088,7 @@
     "\n",
     "4) **Percentage of minority is positively correlated with crime rate, both in west and in urban areas**.\n",
     "\n",
-    "5) Thus, a combination of density and urban (or west or central) can help aid crime rate prediction.\n",
+    "5) Thus, a combination of density and location (urban/ west/ central) can help aid crime rate prediction.\n",
     "\n",
     "6) However, there seems to be **not much data for 'urban areas'** to arrive at a conclusion.\n",
     "\n",
@@ -2011,7 +2117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**The above observations from EDA would be carried forward to help Linear Regression (Part II).**"
+    "**The above observations from EDA are carried forward to help Linear Regression (Part II).**"
    ]
   },
   {
